Fixed overflowing div

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -18,6 +18,7 @@
 
   .cart-items {
     height: 240px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     overflow: scroll;
